--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -12,11 +12,20 @@
   </div>
 </div>
 
-<%= form_for(@message) do |f| %>
-  名前:
-  <%= f.text_field :name %>
-
-  内容:
-  <%= f.text_field :body %>
-  <%= f.submit %>
-<% end %>
+<form role="form">
+  <%= form_for(@message) do |f| %>
+    <div class="form-group">
+    　<label for="inputname" class="col-sm-1 control-label">名前</label>
+    　<div class="col-sm-4">
+        <%= f.text_field :name %>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="inputinfo" class="col-sm-1 control-label">内容</label>
+      <div class="col-sm-4">
+        <%= f.text_area :body, :rows => 2, :cols => 100 %>
+        <%= f.submit %>
+      </div>
+    </div>
+  <% end %>
+</form>
