--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -2,21 +2,18 @@
   <div class="panel-heading">
     メッセージ一覧
   </div>
-    
+
   <div class="panel-body">
     <% @messages.each do |message| %>
-     <span class="label label-info"><%= message.name %></span>
-      内容:<%= message.body %>
+      <span class="label label-info"><%= message.name %></span>
+      <%= message.body %>
+      (<% link_to "edit", edit_message_path(message) %>
+      <%= link_to "destroy" , message , method: :delete, data: { confirm: '削除してもよろしいですか？' } %>
+        )
       <br>
     <% end %>
   </div>
 </div>
 
-<%= form_for(@message) do |f| %>
-  名前:
-  <%= f.text_field :name %>
-
-  内容:
-  <%= f.text_field :body %>
-  <%= f.submit %>
-<% end %>
+<% #部分テンプレートを読み込んでいる %>
+<%= render 'form' %>
