--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,30 +1,35 @@
 <div class="panel panel-default">
-  <div class="panel-heading">
-    メッセージ一覧
+    <div class="panel-heading">
+      メッセージ一覧
+    </div>
+      
+    <div class="panel-body">
+      <% @messages.each do |message| %>
+       <span class="label label-info"><%= message.name %></span>
+        内容:<%= message.body %>
+        <br>
+      <% end %>
+    </div>
   </div>
-    
-  <div class="panel-body">
-    <% @messages.each do |message| %>
-     <span class="label label-info"><%= message.name %></span>
-      内容:<%= message.body %>
-      <br>
-    <% end %>
-  </div>
-</div>
 
-<form role="form">
+  <%= form_for(@message, html: { class: "form-horizontal" }) do |f| %>
     <div class="form-group">
-    　<label for="inputname" class="col-sm-1 control-label">名前</label>
-    　<div class="col-sm-4">
-        <%= f.text_field :name %>
+      <label for="message_name" class="col-sm-2 control-label">名前</label>
+      <div class="col-sm-10">
+        <%= f.text_field :name, class: "form-control", placeholder: "名前を入力" %>
       </div>
     </div>
+  
     <div class="form-group">
-      <label for="inputinfo" class="col-sm-1 control-label">内容</label>
-      <div class="col-sm-4">
-        <%= f.text_area :body, :rows => 2, :cols => 100 %>
-        <%= f.submit %>
+      <label for="message_body" class="col-sm-2 control-label">内容</label>
+      <div class="col-sm-10">
+        <%= f.text_area :body, class: "form-control", placeholder: "内容を入力" %>
+      </div>
+    </div>
+  
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <%= f.submit class: "btn btn-sm btn-primary" %>
       </div>
     </div>
   <% end %>
-</form>
