--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -18,6 +18,13 @@
       <%= f.text_field :name, class: "form-control", placeholder: "名前を入力" %>
     </div>
   </div>
+  
+    <div class="form-group">
+    <label for="message_age" class="col-sm-2 control-label">年齢</label>
+    <div class="col-sm-10">
+      <%= f.text_field :age, class: "form-control", placeholder: "年齢を入力" %>
+    </div>
+  </div>
 
   <div class="form-group">
     <label for="message_body" class="col-sm-2 control-label">内容</label>
