--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -1,39 +1,3 @@
 <h1>メッセージの編集</h1>
 
-<div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <%= form_for(@user) do |f| %>
-        <%= render 'shared/error_messages', object: f.object %>
-            
-          <div class="form_group">
-            <%= f.label :name  %>
-            <%= f.text_field :name %>
-            
-            <%= f.label :email %>
-            <%= f.text_field :email %>
-            
-            <%= f.label :password %>
-            <%= f.password_field :password %>
-            
-            <%= f.label :password_confirmation, "Confirmation" %>
-            <%= f.password_field :password_confirmation %>
-          </div>
-          
-          <div class="form_group">
-            <%= f.label :age %>
-            <%= f.text_field :age %>
-            
-            <%= f.label :birth_day %>
-            <%= f.datetime_field :birth_day, "年月日がYYYYMMDDの8文字で入力してください。" %>
-            
-            <%= f.label :region %>
-            <%= f.text_field :region %>
-            
-            <%= f.label :profile %>
-            <%= f.text_area :profile %>
-          </div>  
-            
-            <%= f.submit "保存",data: {confirm: "保存してもよいですか？", disable_with: "処理中" }, class: "btn btn-large btn-primary"  %>
-        <% end %>
-    </div>
-</div>
+<%= render "form" %>
